--- a/templates/add_customer.html
+++ b/templates/add_customer.html
@@ -1,48 +1,48 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
 
 <br><br><br><br>
 
-<h1 class="text-capitalize text-center mx-10 bg-dark text-white"> Register a new customer </h1>
+<h1 class="text-capitalize text-center mx-10 bg-dark text-white">{% trans 'Register a new customer' %}</h1>
 
 <form method="post">
     {% csrf_token %}
     <div class="form-row">
         <div class="form-group col-md-6">
-            <label for="name"> Name </label>
+            <label for="name"> {% trans 'Name' %} </label>
             <input name="name" required type="text" class="form-control" id="name"
-                placeholder="customer first and last name">
+                placeholder="{% trans 'customer first and last name' %}">
         </div>
 
         <div class="form-group col-md-4">
-            <label for="email"> Email </label>
-            <input name="email" required type="email" class="form-control" id="email" placeholder="customer email">
+            <label for="email"> {% trans 'Email' %} </label>
+            <input name="email" required type="email" class="form-control" id="email" placeholder="{% trans 'customer email' %}">
         </div>
 
         <div class="form-group col-md-2">
-            <label for="phone"> Phone </label>
+            <label for="phone"> {% trans 'Phone' %} </label>
             <input name="phone" required type="number" class="form-control" id="phone"
-                placeholder="customer phone number">
+                placeholder="{% trans 'customer phone number' %}">
         </div>
     </div>
 
     <div class="form-row">
         <div class="form-group col-md-6">
-            <label for="sex">Sex</label>
+            <label for="sex">{% trans 'Sex' %}</label>
             <select name="sex" class="form-control" required id="sex">
-                <option> Choose the gender .. </option>
-                <option value="M">Male</option>
-                <option value="F">Feminine</option>
+                <option> {% trans 'Choose the gender ..' %} </option>
+                <option value="M">{% trans 'Male' %}</option>
+                <option value="F">{% trans 'Feminine' %}</option>
             </select>
         </div>
 
         <div class="form-group col-md-6">
-            <label for="age">Age</label>
+            <label for="age">{% trans 'Age' %}</label>
             <select name="age" class="form-control" required id="age">
-                <option> Choose the age range .. </option>
-                <option value="0-15">0-15</option>
-                <option value="0-15">15-25</option>
+                <option> {% trans 'Choose the age range ..' %} </option>
+                <option value="0-15">{% trans '0-15' %}</option>
+                <option value="15-25">{% trans '15-25' %}</option>
             </select>
         </div>
 
@@ -50,26 +50,26 @@
 
     <div class="form-row">
         <div class="form-group col-md-12">
-            <label for="addres"> Address </label>
-            <input name="address" type="text" required type="text" class="form-control" id="address"
-                placeholder="Customer address">
+            <label for="address"> {% trans 'Address' %} </label>
+            <input name="address" type="text" required class="form-control" id="address"
+                placeholder="{% trans 'Customer address' %}">
         </div>
     </div>
 
     <div class="form-row">
         <div class="form-group col-md-6">
-            <label for="city"> City </label>
-            <input name="city" type="text" class="form-control" id="city" placeholder="customer city">
+            <label for="city"> {% trans 'City' %} </label>
+            <input name="city" type="text" class="form-control" id="city" placeholder="{% trans 'customer city' %}">
         </div>
 
         <div class="form-group col-md-6">
-            <label for="zip"> Zip code </label>
+            <label for="zip"> {% trans 'Zip code' %} </label>
             <input name="zip" required type="text" class="form-control" id="zip"
-                placeholder="customer zip code required">
+                placeholder="{% trans 'customer zip code required' %}">
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary"> Save</button>
+    <button type="submit" class="btn btn-primary"> {% trans 'Save' %}</button>
 
 </form>
 
