--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,12 @@
 {% load static %}
 {% load i18n %}
 
-
-
-
-
 {% block content %}
 <br><br>
 
 <div class="row">
    <a href="{% url 'add-invoice' %}" class="btn col-md-4 btn-primary">
-      Register a new invoice<span class="badge text-bg-secondary"></span>
+      {% trans 'Register a new invoice' %}<span class="badge text-bg-secondary"></span>
    </a>
 
    <a href='#' class="col-md-4">
@@ -19,7 +15,7 @@
    </a>
 
    <a href="{% url 'add-customer' %}" class="btn col-md-4 btn-primary">
-      Register a new customer<span class="badge text-bg-secondary"></span>
+      {% trans 'Register a new customer' %}<span class="badge text-bg-secondary"></span>
    </a>
 
 </div>
@@ -27,20 +23,25 @@
 <br> <br>
 
 <div class="form-group ">
-   <input id="search" class="form-control" type="text" placeholder="Search....">
+   <input id="search" class="form-control" type="text" placeholder="{% trans 'Search....' %}">
 </div>
+
+<a href="{% url 'export_invoices_csv' %}" class="btn btn-primary">
+   Télécharger le CSV
+</a>
+
 
 <div>
    <table class="table table-striped-columns">
       <thead>
          <tr>
             <th scope="col">#</th>
-            <th scope="col">CUSTOMERS NAME</th>
-            <th scope="col">DATE</th>
-            <th scope="col">TOTAL</th>
-            <th scope="col">PAID</th>
-            <th scope="col">TYPE OF INVOICE</th>
-            <th scope="col">ACTION</th>
+            <th scope="col">{% trans 'CUSTOMERS NAME' %}</th>
+            <th scope="col">{% trans 'DATE' %}</th>
+            <th scope="col">{% trans 'TOTAL' %}</th>
+            <th scope="col">{% trans 'PAID' %}</th>
+            <th scope="col">{% trans 'TYPE OF INVOICE' %}</th>
+            <th scope="col">{% trans 'ACTION' %}</th>
          </tr>
       </thead>
       <tbody id="myTable">
@@ -53,33 +54,62 @@
             <td>{{ facture.get_total }}</td>
             <td>
                {% if facture.paid %}
-               <img src="{% static 'images/icon-yes.svg' %}" alt="True">
+               <img src="{% static 'images/icon-yes.svg' %}" alt="{% trans 'True' %}">
                {% else %}
-               <img src="{% static 'images/icon-no.svg' %}" alt="False">
+               <img src="{% static 'images/icon-no.svg' %}" alt="{% trans 'False' %}">
                {% endif %}
             </td>
-            <td>{{facture.invoice_type }}</td>
+            <td>{{ facture.get_invoice_type_display }}</td>
             <td>
-               <a href="" title="Detail" class="badge text-white bg-success">View</a>
+               <a href="{% url 'view-invoice' pk=facture.pk %}" title="{% trans 'Detail' %}" class="badge text-white bg-success">{% trans 'View' %}</a>
 
                <button id="btn-invoice-sup" type="button" data-toggle="modal" data-target="#supprimer"
-                  class="badge text-white bg-danger" title="Supprimer" data-id="{{ facture.pk }}"
-                  data-customer="{{facture.customer.name}}">Delete
+                  class="badge text-white bg-danger" title="{% trans 'Delete' %}" data-id="{{ facture.pk }}"
+                  data-customer="{{facture.customer.name}}">{% trans 'Delete' %}
                </button>
 
-               <button id="btn-invoice-mod" type="button" data-toggle="modal" title="Modifier" data-target="#modifier"
+               <button id="btn-invoice-mod" type="button" data-toggle="modal" title="{% trans 'Modify' %}" data-target="#modifier"
                   data-id="{{facture.pk}}" data-customer="{{facture.customer.name}}"
-                  class="badge text-dark bg-warning">Modify
+                  class="badge text-dark bg-warning">{% trans 'Modify' %}
                </button>
             </td>
          </tr>
 
          {% endfor %}
 
-         
-            <p class="text-center text-white">No invoice found.</p>
-         {% endif %}
+         {% if invoices.has_other_pages %}
 
+         <div class="btn-group" role="group" aria-label="{% trans 'Item pagination' %}">
+     
+             {% if invoices.has_previous %}
+                 <a href="?page={{ invoices.previous_page_number }}" class="btn btn-outline-primary">&laquo;</a>
+             {% endif %}
+     
+             {% for page_number in invoices.paginator.page_range %}
+     
+                 {% if invoices.number == page_number %}
+                     <button class="btn btn-outline-primary active">
+                         <span>{{ page_number }} <span class="sr-only">({% trans 'current' %})</span></span>
+                     </button>
+                 {% else %}
+                     <a href="?page={{ page_number }}" class="btn btn-outline-primary">
+                         {{ page_number }}
+                     </a>
+                 {% endif %}
+     
+             {% endfor %}
+     
+             {% if invoices.has_next %}
+                 <a href="?page={{ invoices.next_page_number }}" class="btn btn-outline-primary">&raquo;</a>
+             {% endif %}
+     
+         </div>
+     
+     {% endif %}
+
+      {%else%}
+         <p class="text-center text-white">{% trans 'No invoice found.' %}</p>
+      {% endif %}
 
       </tbody>
 
@@ -92,8 +122,8 @@
    <div class="modal-dialog" role="document">
       <div class="modal-content">
          <div class="modal-header">
-            <h5 class="modal-title text-dark text-center" id="exampleModalLabel">Modification</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <h5 class="modal-title text-dark text-center" id="exampleModalLabel">{% trans 'Modification' %}</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="{% trans 'Close' %}">
                <span aria-hidden="true">&times;</span>
             </button>
          </div>
@@ -103,18 +133,18 @@
 
                <input name="id_modified" type="hidden" id="id_modified">
 
-               <label id="label_id" class="text-dark checkbox-inline"> <strong id="strong_id"> This bill has been paid?</strong></label>
+               <label id="label_id" class="text-dark checkbox-inline"> <strong id="strong_id">{% trans 'This bill has been paid?' %}</strong></label>
 
                <input type="radio" id="html" name="modified" value="True">
-               <label class="text-white bg-primary" for="html">Yes</label>
+               <label class="text-white bg-primary" for="html">{% trans 'Yes' %}</label>
 
                <input type="radio" id="css" name="modified" value="False">
-               <label class="text-white bg-danger" for="css">No</label><br>
+               <label class="text-white bg-danger" for="css">{% trans 'No' %}</label><br>
 
             </div>
             <div class="modal-footer">
-               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-               <button type="submit" class="btn btn-primary">Save</button>
+               <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans 'Close' %}</button>
+               <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
             </div>
          </form>
       </div>
@@ -128,8 +158,8 @@
    <div class="modal-dialog" role="document">
       <div class="modal-content">
          <div class="modal-header">
-            <h5 class="modal-title text-dark" id="sexampleModalLabel">Delete Invoice</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <h5 class="modal-title text-dark" id="sexampleModalLabel">{% trans 'Delete Invoice' %}</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="{% trans 'Close' %}">
                <span aria-hidden="true">&times;</span>
             </button>
          </div>
@@ -137,11 +167,11 @@
             <form method="post">
                {% csrf_token %}
                <input name="id_supprimer" type="hidden" id="id_supprimer">
-               <label id="label_id_s" class="text-dark checkbox-inline"> <strong id="strong_id_s">Are you sure you want to delete the invoice  ?</strong></label>
+               <label id="label_id_s" class="text-dark checkbox-inline"> <strong id="strong_id_s">{% trans 'Are you sure you want to delete the invoice?' %}</strong></label>
 
                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="submit" class="btn btn-danger">Delete</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans 'Close' %}</button>
+                  <button type="submit" class="btn btn-danger">{% trans 'Delete' %}</button>
                </div>
             </form>
          </div>
@@ -173,10 +203,7 @@
 
    })
 
-
-
 </script>
-
 
 <script>
 
@@ -190,7 +217,5 @@
    });
 
 </script>
-
-
 
 {% endblock %}
